Update U-space CI tested requirements

--- a/monitoring/uss_qualifier/configurations/dev/uspace.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/uspace.yaml
@@ -135,17 +135,35 @@ v1:
                   - astm.f3411.v22a.service_provider#Operational Status provider
                   - astm.f3411.v22a.display_provider#Mandatory requirements
                   - astm.f3411.v22a.display_provider#UAS ID Serial Number transmitter
+                  - astm.f3411.v22a.display_provider#UA Type transmitter
+                  - astm.f3411.v22a.display_provider#UA Classification Type transmitter
                   - astm.f3411.v22a.display_provider#Timestamp transmitter
+                  - astm.f3411.v22a.display_provider#Timestamp Accuracy transmitter
                   - astm.f3411.v22a.display_provider#Operational Status transmitter
                   - astm.f3411.v22a.display_provider#Operator ID transmitter
                   - astm.f3411.v22a.display_provider#Current Position transmitter
+                  - astm.f3411.v22a.display_provider#Geodetic Altitude transmitter
                   - astm.f3411.v22a.display_provider#Height transmitter
+                  - astm.f3411.v22a.display_provider#Geodetic Vertical Accuracy transmitter
+                  - astm.f3411.v22a.display_provider#Horizontal Accuracy transmitter
+                  - astm.f3411.v22a.display_provider#Speed Accuracy transmitter
                   - astm.f3411.v22a.display_provider#Track Direction transmitter
                   - astm.f3411.v22a.display_provider#Speed transmitter
+                  - astm.f3411.v22a.display_provider#Vertical Speed transmitter
                   - astm.f3411.v22a.display_provider#Operator Position transmitter
                   - astm.f3411.v22a.dss_provider
                   - astm.f3548.v21.scd#Automated verification
                   - astm.f3548.v21.dss_provider
+                exclude:
+                  requirements:
+                    - astm.f3411.v22a.DSS0040
+                    - astm.f3411.v22a.NET0010
+                    - astm.f3411.v22a.NET0020
+                    - astm.f3411.v22a.NET0230
+                    - astm.f3411.v22a.NET0410
+                    - astm.f3411.v22a.NET0620
+                    - astm.f3411.v22a.NET0630
+                    - astm.f3411.v22a.NET0720
               - requirements:
                   - uspace.article8.MSLAltitude
         participant_requirements:
