--- a/.github/workflows/monitoring-test.yml
+++ b/.github/workflows/monitoring-test.yml
@@ -16,6 +16,8 @@ jobs:
   monitoring-test:
     runs-on: ubuntu-latest
     name: ${{ inputs.name }} test
+    permissions:
+      contents: read
     steps:
     - name: Job information
       run: |
