--- a/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
+++ b/monitoring/uss_qualifier/suites/astm/netrid/f3411_22a.yaml
@@ -33,6 +33,13 @@ actions:
         evaluation_configuration: evaluation_configuration
         dss_pool: dss_instances
     on_failure: Continue
+  - test_scenario:
+      scenario_type: scenarios.astm.netrid.v22a.SpOperatorNotifyMissingFields
+      resources:
+        flights_data: flights_data
+        service_providers: service_providers
+        evaluation_configuration: evaluation_configuration
+    on_failure: Continue
   - action_generator:
       generator_type: action_generators.astm.f3411.ForEachDSS
       resources:
