Make flight planner preparation best-effort

--- a/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
+++ b/monitoring/uss_qualifier/suites/astm/utm/f3548_21.yaml
@@ -44,7 +44,7 @@ actions:
       flight_intents2: priority_preemption_flights?
       flight_intents3: conflicting_flights?
       flight_intents4: non_conflicting_flights?
-  on_failure: Abort
+  on_failure: Continue
 - action_generator:
     generator_type: action_generators.astm.f3548.ForEachDSS
     resources:
