[uss_qualifier] Add filter option when runnign tests

--- a/schemas/monitoring/uss_qualifier/configurations/configuration/ExecutionConfiguration.json
+++ b/schemas/monitoring/uss_qualifier/configurations/configuration/ExecutionConfiguration.json
@@ -17,6 +17,13 @@
         "null"
       ]
     },
+    "scenarios_filter": {
+      "description": "Filter test scenarios by class name using a regex. When empty, all scenarios are executed. Useful for targeted debugging. Overridden by --filter",
+      "type": [
+        "string",
+        "null"
+      ]
+    },
     "skip_action_when": {
       "description": "If specified, do not execute test actions if they are selected by ANY of these conditions.",
       "items": {
