Expand and clarify --filter capability

--- a/schemas/monitoring/uss_qualifier/configurations/configuration/ExecutionConfiguration.json
+++ b/schemas/monitoring/uss_qualifier/configurations/configuration/ExecutionConfiguration.json
@@ -18,7 +18,7 @@
       ]
     },
     "scenarios_filter": {
-      "description": "Filter test scenarios by class name using a regex. When empty, all scenarios are executed. Useful for targeted debugging. Overridden by --filter",
+      "description": "Filter test scenarios by scenario type using a regex. If the filter regex does not match within the scenario type, the scenario is skipped. When empty, all scenarios are executed. Useful for targeted debugging. Overridden by --filter",
       "type": [
         "string",
         "null"
