Fix artifact generation pipeline and add timing report coloring

--- a/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
+++ b/monitoring/uss_qualifier/configurations/dev/dss_probing.yaml
@@ -57,6 +57,7 @@ v1:
         participant_requirements:
           uss1: null
           uss2: all_astm_dss_requirements
+    timing_report: { }
   validation:
     criteria:
       - $ref: ./library/validation.yaml#/execution_error_none
